# pytop

./: .gitignore  Dockerfile  README.md  docker-compose-macos.yml  docker-compose.yml  generate_doc.sh  isoparametric_2D_box_to_triangle.csv  setup.cfg  temp.xml  temp_nastran:ref.xml
.devcontainer/: devcontainer.json
.github/workflows/: coverage.yml  python-app.yml
docs/: designvariable.html  filters.html  index.html  nlopt_optimizer.html  optimizer.html  statement.html  utils.html
docs/physics/: elasticity.html  index.html  shell.html  thermal.html  utils.html
docs/toolkit/: dehomogenization.html  index.html
examples/: elasticity_2D_cantilever.py  elasticity_solid.py  orthro_elsasticity_2D_cantilever.py  orthro_elsasticity_2D_cantilever_tensor.py  orthro_elsasticity_2D_mbb_tensor.py  poisson_problem-3d.py  poisson_problem.py
output/: density.h5  density.xdmf  logging.csv
output/2D-poisson/: logging.csv
output/3D-poisson/: logging.csv
pytop/: __init__.py  designvariable.py  designvector.py  filters.py  nlopt_optimizer.py  optimizer.py  statement.py  utils.py
pytop/physics/: elasticity.py  shell.py  thermal.py  utils.py
pytop/toolkit/: dehomogenization.py
tests/: test_designVector.py  test_designvariable.py  test_designvariables.py  test_filter.py  test_problemstatement.py  test_stripe.py  test_utils.py
tests/test_meshs/: unstructured_tiangle_xy2D_rectangle_test_mesh.bdf  unstructured_tiangle_xy2D_rectangle_test_mesh.h5  unstructured_tiangle_xy2D_rectangle_test_mesh.inp  unstructured_tiangle_xy2D_rectangle_test_mesh.xdmf
