[metadata]
name = pytop
version = attr: pytop.__version__
author = Naruki Ichihara
author_email = ichihara.naruki@gmail.com
long_description = file:README.md
url = https://github.com/Naruki-Ichihara/pytop
license = LICENSE
classifier =
    Development Status :: 1 - Pre-Alpha
    Programming Language :: Python
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    
[options]
zip_safe = False
packages = find:
install_requires =
  dataclasses
  numpy